# my-maintenance-list

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  commitlint.config.cjs  commitlint.config.js  deny.toml  package-lock.json  package.json
.cargo-about/: about.hbs  about.toml
.github/: dependabot.yml
.github/workflows/: commitlint.yml  deny.yml  javascript-lint.yml  machete.yml  rust-lint.yml  test.yml
crates/lib-api-data/: Cargo.toml
crates/lib-api-data/src/: export.rs  lib.rs  response.rs
crates/lib-api-data/tests/: test_export.rs
crates/lib-api-router/: Cargo.toml
crates/lib-api-router/src/: lib.rs
crates/lib-data-web/: .dockerignore  .gitignore  Cargo.toml  package-lock.json
crates/lib-data-web/src/components/__tests__/: HelloWorld.spec.ts
crates/lib-data-web/tests/: test_web_files.rs
crates/lib-middleware/: Cargo.toml
crates/lib-middleware-wide-events/: Cargo.toml
crates/lib-middleware-wide-events/src/: lib.rs  wide_event.rs  wide_event_layer.rs
crates/lib-router-api/: Cargo.toml
crates/lib-router-api/src/: health.rs
crates/lib-router-web/: Cargo.toml
crates/lib-web/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  vite.config.ts
crates/lib-web-router/: Cargo.toml
crates/lib-web-router/src/: lib.rs
crates/lib-web/src/: lib.rs
crates/lib-web/src/components/: HelloWorld.vue
crates/lib-web/tests/: test_web_files.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
