[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
lib-api-router = { path = "crates/lib-api-router" }
lib-web = { path = "crates/lib-web" }
lib-web-router = { path = "crates/lib-web-router" }

axum = "~0.8.4"
axum-extra = "~0.10.1"
camino = "~1.1.12"
itertools = "~0.14.0"
jsonwebtoken = "~9.3.1"
phf = "~0.13.1"
tokio = { version = "~1.47.1", features = ["full"] }
phf_codegen = "~0.13.1"
glob = "~0.3.3"
mime_guess = "~2.0.5"
flate2 = "~1.1.2"
tracing = "~0.1.41"
tracing-subscriber = "~0.3.19"
serde = "~1.0.227"
serde_json = "~1.0.143"
thiserror = "~2.0.16"
validator = "~0.20.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "any", "postgres", "macros"] }

[workspace.metadata.cargo-machete]
ignored = ["axum-extra", "jsonwebtoken", "tracing", "tracing-subscriber", "serde", "serde_json", "thiserror", "validator", "sqlx"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
