[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
lib-data-web = { path = "crates/lib-data-web" }
lib-web-router = { path = "crates/lib-web-router" }
lib-middleware = { path = "crates/lib-middleware" }
lib-router-api = { path = "crates/lib-router-api" }

axum = "~0.8.8"
axum-extra = "~0.12.5"
camino = "~1.2.2"
itertools = "~0.14.0"
jsonwebtoken = "~10.2.0"
phf = "~0.13.1"
tokio = { version = "~1.49.0", features = ["full"] }
phf_codegen = "~0.13.1"
glob = "~0.3.3"
mime_guess = "~2.0.5"
flate2 = "~1.1.5"
serde = "~1.0.228"
serde_json = "~1.0.149"
thiserror = "~2.0.17"
validator = "~0.20.0"
futures-util = "~0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "any", "postgres", "macros"] }

[workspace.metadata.cargo-machete]
ignored = ["axum-extra", "jsonwebtoken", "tracing", "tracing-subscriber", "serde", "serde_json", "thiserror", "validator", "sqlx"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
