[package]
name = "server"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
debug-web = []

[dependencies]
lib-web-router.workspace = true
lib-middleware.workspace = true
lib-router-api.workspace = true

axum.workspace = true
tokio.workspace = true

[lints]
workspace = true
